--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-asgiref==3.7.2
 Django==4.2.6
 django-jazzmin==2.6.0
-django-multiselectfield==0.1.12
 djangorestframework==3.14.0
 modeltranslation==0.25
-pytz==2023.3.post1
-sqlparse==0.4.4
-typing_extensions==4.8.0
-tzdata==2023.3
 environs==9.5.0
 Pillow==10.1.0
+aiogram==2.25.1
+drf_yasg==1.21.7
