--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==4.2.6
 django-jazzmin==2.6.0
 djangorestframework==3.14.0
+django-cors-headers==4.1.0
 modeltranslation==0.25
 environs==9.5.0
 Pillow==10.1.0
