secure aws data to env file

--- a/.env-example
+++ b/.env-example
@@ -21,3 +21,9 @@ REDIS_PORT=6379
 CELERY_ACCEPT_CONTENT=application/json
 CELERY_TASK_SERIALIZER=json
 CELERY_RESULT_SERIALIZER=json
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=
+AWS_S3_SIGNATURE_NAME=
+AWS_S3_REGION_NAME=
