--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ autobahn==23.6.2
 Automat==22.10.0
 Babel==2.9.1
 billiard==3.6.4.0
+boto3==1.34.14
+botocore==1.34.14
+cachetools==5.3.2
 celery==5.2.7
 certifi==2023.11.17
 cffi==1.16.0
@@ -34,6 +37,7 @@ django-cuser==2017.3.16
 django-jazzmin==2.6.0
 django-js-asset==2.1.0
 django-redis==5.4.0
+django-storages==1.14.2
 django-timezone-field==6.1.0
 django-tinymce==3.6.1
 djangorestframework==3.14.0
@@ -43,6 +47,11 @@ environs==9.5.0
 eventlet==0.25.1
 flower==2.0.1
 frozenlist==1.4.0
+google-api-core==2.15.0
+google-api-python-client==2.112.0
+google-auth==2.26.1
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.62.0
 googletrans==3.1.0a0
 greenlet==3.0.1
 gunicorn==21.2.0
@@ -51,6 +60,7 @@ h2==3.2.0
 hpack==3.0.0
 hstspreload==2023.1.1
 httpcore==0.9.1
+httplib2==0.22.0
 httpx==0.13.3
 humanize==4.9.0
 hyperframe==5.2.0
@@ -60,6 +70,7 @@ imageio==2.33.1
 imageio-ffmpeg==0.4.9
 incremental==22.10.0
 inflection==0.5.1
+jmespath==1.0.1
 kombu==5.3.4
 magic-filter==1.0.12
 marshmallow==3.20.1
@@ -67,15 +78,19 @@ modeltranslation==0.25
 monotonic==1.6
 multidict==6.0.4
 numpy==1.26.2
+oauth2client==4.1.3
 packaging==23.2
 Pillow==10.1.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.41
+protobuf==4.25.1
 psutil==5.9.7
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
+PyDrive==1.3.1
 pyOpenSSL==23.3.0
+pyparsing==3.1.1
 python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -85,6 +100,8 @@ redis==5.0.1
 reportlab==4.0.8
 requests==2.31.0
 rfc3986==1.5.0
+rsa==4.9
+s3transfer==0.10.0
 service-identity==23.1.0
 six==1.16.0
 sniffio==1.3.0
