--- a/.env-example
+++ b/.env-example
@@ -27,3 +27,7 @@ AWS_SECRET_ACCESS_KEY=
 AWS_STORAGE_BUCKET_NAME=
 AWS_S3_SIGNATURE_NAME=
 AWS_S3_REGION_NAME=
+
+PAYMENT_MERCHANT_ID=
+PAYMENT_SECRET_KEY=
+PAYMENT_API_KEY=
